<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_category_theme">

        <SwitchPreference
            app:key="@string/pref_theme_key"
            app:title="@string/pref_theme_title"
            app:summary="@string/pref_theme_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_path">

        <SwitchPreference
            app:key="@string/pref_path_key"
            app:title="@string/pref_path_title"
            app:summary="@string/pref_path_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_text_size">
        <EditTextPreference
            app:key="@string/pref_text_size_key"
            app:title="@string/pref_text_size_title"
            app:summary="@string/pref_text_size_summary" />
    </PreferenceCategory>

</PreferenceScreen>